Bug 167644 - UI: The drop down arrows are upside down
Summary: UI: The drop down arrows are upside down
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
: 167699 167939 (view as bug list)
Depends on:
Blocks: UI
  Show dependency treegraph
 
Reported: 2025-07-23 07:51 UTC by Telesto
Modified: 2025-08-22 11:26 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (8.58 KB, image/jpeg)
2025-07-23 07:52 UTC, Telesto
Details
Checkboxes (13.43 KB, image/jpeg)
2025-07-23 07:54 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-07-23 07:51:57 UTC
Description:
The drop down arrows are upside down

Steps to Reproduce:
1. Open Writer
2. Look at Font or Font size drop down arrow

Actual Results:
Arrow is oriented upwards

Expected Results:
Downwards


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL threaded
Comment 1 Telesto 2025-07-23 07:52:29 UTC
Created attachment 201947 [details]
Screenshot
Comment 2 Telesto 2025-07-23 07:54:41 UTC
Created attachment 201948 [details]
Checkboxes

Same for  checkboxes
Comment 3 nobu 2025-07-23 08:23:23 UTC
only Windows-OS ?

Reproducible with
[2025-07-23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

Not reproduced with
[2025-07-23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 4 nobu 2025-07-23 11:31:00 UTC
This problem occurs in all applications.
Also occurs in StartCenter.
Comment 5 raal 2025-07-28 14:20:59 UTC
No repro o Linux Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8b60950947e8017b1f0b30538b6ef9a3bab51bee
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 6 nobu 2025-07-28 19:26:28 UTC
*** Bug 167699 has been marked as a duplicate of this bug. ***
Comment 7 Mike Kaganski 2025-07-31 07:37:11 UTC
Just some notes

* implDrawNativeMenuMark is a starting point where menu checkmarks are drawn (tdf#167699)

* removing the minus at nDY at https://opengrok.libreoffice.org/xref/core/vcl/win/gdi/salvd.cxx?r=088a7c7c451321a800ca8d3523a18b6bb93239b7&mo=1201&fi=34#56 "fixes" this specific problem, but indeed that's just a hack, and immediately creates new problems, like missing toolbar button hover effect.

Just maybe this helps whoever decides to debug.
Comment 8 Mike Kaganski 2025-07-31 16:17:11 UTC
Regression after 088a7c7c451321a800ca8d3523a18b6bb93239b7 ;)
Comment 9 Commit Notification 2025-08-22 09:53:56 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b88a1966f06df048e05a4e8b89688817515fc55

tdf#167644 UI: The drop down arrows are upside down

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Regina Henschel 2025-08-22 11:26:54 UTC
*** Bug 167939 has been marked as a duplicate of this bug. ***