tdf#167644 UI: The drop down arrows are upside down

regression from
    commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Sep 24 16:18:11 2024 +0200
    remove alpha device from OutputDevice

Change-Id: I1323d9f0a42f18fe367d0b851eb8400e25689161
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190046
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins